Bug 54398 - DrawingAreaImpl::display handles error cases poorly
Summary: DrawingAreaImpl::display handles error cases poorly
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Adam Roben (:aroben)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-14 09:43 PST by Adam Roben (:aroben)
Modified: 2011-02-14 10:27 PST (History)
1 user (show)

See Also:


Attachments
Patch (2.60 KB, patch)
2011-02-14 09:44 PST, Adam Roben (:aroben)
darin: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Roben (:aroben) 2011-02-14 09:43:09 PST
DrawingAreaImpl::display handles error cases poorly
Comment 1 Adam Roben (:aroben) 2011-02-14 09:44:20 PST
Created attachment 82326 [details]
Patch
Comment 2 Darin Adler 2011-02-14 10:13:35 PST
Comment on attachment 82326 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=82326&action=review

> Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.cpp:410
> +    if (m_layerTreeHost)
> +        return;

This might need a “why” comment.
Comment 3 Anders Carlsson 2011-02-14 10:19:52 PST
Comment on attachment 82326 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=82326&action=review

> Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.cpp:409
> +    if (m_layerTreeHost)

Please add a comment here, something like "we entered compositing mode" so we shouldn't paint.
Comment 4 Adam Roben (:aroben) 2011-02-14 10:21:27 PST
Comment on attachment 82326 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=82326&action=review

>> Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.cpp:410
>> +        return;
> 
> This might need a “why” comment.

Added this comment:

    // The layout may have put the page into accelerated compositing mode, in which case the
    // LayerTreeHost is now in charge of displaying.
Comment 5 Adam Roben (:aroben) 2011-02-14 10:27:59 PST
Committed r78489: <http://trac.webkit.org/changeset/78489>